--- a/package.json
+++ b/package.json
@@ -66,7 +66,10 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/cache": "^3.2.2",
+    "@actions/core": "^1.10.1",
+    "@actions/exec": "^1.1.1",
+    "@actions/io": "^1.1.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
